New: Exercise MO.T25, transpose of triangular matrix
New: Exercise MM.T28, diagonal of triangular matrix product
New: Exercise MINM.T50, modified proof of Theorem NPNF
New: Example UE, unknown eigenvalues
New: Exercise MM.T80, apply nonsingular matrix to a linearly independent set
New: Exercise MM.T38, uniqueness of solutions with nonsingular coefficient matrices
Edit: Theorem TSS, added "an" in the proof (Rachel Chaiser)
Edit: Theorem EDYES, substantially shorten proof
Edit: Exercise IVLT.T15, streamline solution
Edit: Clarify Example NSE (Katrina Hoefflinger)
Edit: Added missing Sage practice cell in Sage LI (Samuel Gonzalez)
Edit: Theorem PSPHS, proof missing "+" (Katrina Hoefflinger)
Edit: Fine-tune induction proof of Theorem EOMP
Edit: Expanded Example MWIAA
Edit: Solution MR.T80, added one step to proof (Zach Jarvis)
Edit: Definition SUV, harmonize with Definition IM (Nathan Schultz)
Edit: Example SCAD, take more care with "span" (Robert Dwyer)
Edit: Structure five solutions as "iff" proofs (Mira Schoeberlein)
Edit: Simplify Solution ILT.T10
Edit: Definition CM, improve matrix display (Carissa Riedesel)
Edit: Clean-up Exercise VS.M13 (Jasmine Mikesell)
Edit: Expand Solution IVLT.T40
Edit: Improve Definition SIM, Similar Matrices
Edit: Theorem SMEE, expand conclusion, edit proof
Edit: Theorem DED, simplify the proof
Edit: Theorem DC, minor changes to streamline proof
Edit: Theorem SER, minor changes to streamline proof
Edit: Edit the proof of Theorem ITMT
Edit: Enhance discussion of nonsingular as similar to nonzero
Edit: Example EENS, take more care with conclusions drawn
Change: Streamline second half of the proof of Theorem BS
Change: Exercise VO.T30, define subtraction more carefully (Ken Price)
Change: Theorems SSNS, BNS need case when n = r (Ken Price)
Change: Example NIDAU, in discussion, "are" to "is" (Lukas Karoly)
Change: Exercise LT.C43, clarify versions of the zero vector (Jake Rizzo)
Change: Solution SLT.C27, "are" to "is" (Ashlen Isbell)