@@ -950,6 +950,42 @@
                 </md>.  So by <xref ref="definition-OV" acro="OV"/>, <m>\vect{u}</m> and <m>\alpha\vect{v}+\beta\vect{w}</m> are an orthogonal pair of vectors.</p>
             </solution>
         </exercise>
+        <exercise number="T21" xml:id="exercise-O-T21">
+            <statement>
+                <p>Suppose that <m>\vect{u},\,\vect{v}\in\complex{m}</m> are orthogonal vectors with equal norms.  Prove that <m>\vect{u}+\vect{v}</m> and <m>\vect{u}-\vect{v}</m> are orthogonal vectors.</p>
+            </statement>
+            <solution xml:id="solution-O-T21">
+                <p>Vectors are orthogonal if their inner product is zero (<xref ref="definition-OV" acro="OV"/>), so we compute<md>
+                    <mrow>\innerproduct{\vect{u}+\vect{v}}{\vect{u}-\vect{v}}
+                    &amp;=
+                    \innerproduct{\vect{u}}{\vect{u}-\vect{v}}+
+                    \innerproduct{\vect{v}}{\vect{u}-\vect{v}}
+                    &amp;&amp;<xref ref="theorem-IPVA" acro="IPVA"/></mrow>
+                    <mrow>&amp;=
+                    \innerproduct{\vect{u}}{\vect{u}}+
+                    \innerproduct{\vect{u}}{-\vect{v}}+
+                    \innerproduct{\vect{v}}{\vect{u}}+
+                    \innerproduct{\vect{v}}{-\vect{v}}
+                    &amp;&amp;<xref ref="theorem-IPVA" acro="IPVA"/></mrow>
+                    <mrow>&amp;=
+                    \innerproduct{\vect{u}}{\vect{u}}-
+                    \innerproduct{\vect{u}}{\vect{v}}+
+                    \innerproduct{\vect{v}}{\vect{u}}-
+                    \innerproduct{\vect{v}}{\vect{v}}
+                    &amp;&amp;<xref ref="theorem-IPVA" acro="IPSM"/></mrow>
+                    <mrow>&amp;=
+                    \innerproduct{\vect{u}}{\vect{u}}-
+                    0+
+                    0-
+                    \innerproduct{\vect{v}}{\vect{v}}
+                    &amp;&amp;<xref ref="definition-OV"/></mrow>
+                    <mrow>&amp;=
+                    \norm{\vect{u}}^2 - \norm{\vect{v}}^2
+                    &amp;&amp;<xref ref="theorem-IPN"/></mrow>
+                    <mrow>&amp;=0&amp;&amp;\text{Hypothesis}</mrow>
+                </md>.  So by <xref ref="definition-OV" acro="OV"/>, <m>\vect{u}+\vect{v}</m> and <m>\vect{u}-\vect{v}</m> are an orthogonal pair of vectors.  Notice how this proof uses <em>theorems</em> about vectors, and never considers individual entries of those vectors.</p>
+            </solution>
+        </exercise>
         <exercise number="T30" xml:id="exercise-O-T30">
             <statement contributor="stevecanfield">
                 <p>Suppose that the set <m>S</m> in the hypothesis of <xref ref="theorem-GSP" acro="GSP"/> is not just linearly independent, but is also orthogonal.  Prove that the set <m>T</m> created by the Gram-Schmidt procedure is equal to <m>S</m>.  (Note that we are getting a stronger conclusion than <m>\spn{T}=\spn{S}</m> <mdash/> the conclusion is that <m>T=S</m>.)  In other words, it is pointless to apply the Gram-Schmidt procedure to a set that is already orthogonal.</p>
