@@ -60,6 +60,7 @@ New: Exercise MINM.T50, modified proof of Theorem NPNF
 New: Example UE, unknown eigenvalues
 New: Exercise MM.T80, apply nonsingular matrix to a linearly independent set
 New: Exercise MM.T38, uniqueness of solutions with nonsingular coefficient matrices
+New: Exercise O.T21, orthogonality in a special situation
 Edit: Theorem TSS, added "an" in the proof (Rachel Chaiser)
 Edit: Theorem EDYES, substantially shorten proof
 Edit: Exercise IVLT.T15, streamline solution
